[gd_scene load_steps=4 format=3 uid="uid://cu2jsegm1nbtf"]

[ext_resource type="Script" uid="uid://cd8j4q768wuxu" path="res://vision/VisionTask.gd" id="1_xmyhf"]

[sub_resource type="Theme" id="Theme_pmbf8"]
default_font_size = 48

[sub_resource type="Theme" id="Theme_o6g06"]
default_font_size = 32

[node name="VisionTask" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_xmyhf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Vision Task"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CamerasContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_pmbf8")
theme_override_constants/separation = 32
alignment = 1

[node name="OpenCamera" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
disabled = true
text = "Open Camera"

[node name="SelectCamera" type="ConfirmationDialog" parent="."]
title = "Select Camera"
position = Vector2i(0, 36)
size = Vector2i(200, 139)
theme = SubResource("Theme_o6g06")

[node name="VBoxContainer" type="VBoxContainer" parent="SelectCamera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2

[node name="LabelFeed" type="Label" parent="SelectCamera/VBoxContainer"]
layout_mode = 2
text = "Select Camera:"

[node name="SelectFeed" type="OptionButton" parent="SelectCamera/VBoxContainer"]
layout_mode = 2

[node name="LabelFormat" type="Label" parent="SelectCamera/VBoxContainer"]
layout_mode = 2
text = "Select Format:"

[node name="SelectFormat" type="OptionButton" parent="SelectCamera/VBoxContainer"]
layout_mode = 2

[node name="PermissionDialog" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "Permission Denied"
size = Vector2i(283, 109)
dialog_text = "Camera permission is not granted.
Please start the camera again."
